@@ -475,6 +475,7 @@ Federico Schwindt
 Torrey Searle
 Peter Seebach
 Don Seiler
+Mihai Serban
 Leonardo Serra
 Matteo Settenvini
 Colin Seymour
